--- a/css/portalstyle.css
+++ b/css/portalstyle.css
@@ -1,35 +1,62 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Nunito Sans', Arial, Helvetica, sans-serif;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 1em;
+    color: #4b4b4b;
+
 }
 
 header {
     background-color: #643219;
-    border-radius: 20px;
-
+    border-radius: 15px;
+    display: grid;
+    grid-template-columns: auto auto auto 150px;
+    max-height: 6em;
 }
 
 header h1 {
     color: white;
-    font-size: 4em;
-
-
-}
-
-header img {}
-
-main {
+    font-size: 3em;
+    grid-column: 1 / 4;
+    text-align: center;
+    padding-bottom: 0px;
+    margin-top: .5em;
 
 }
+
+header img {
+    grid-column: 4 / 5;
+    box-shadow: 1px 1px 20px black, -1px -1px 20px black;
+    margin-top: 10px;
+
+    ;
+}
+
+main {}
+
 main h2 {
     font-size: 2em;
     font-weight: bold;
+    border-bottom: 1px solid black;
 }
+
 footer {
     background-color: #643219;
-    border-radius: 25px;
+    border-radius: 10px;
     color: white;
+    text-align: center;
+    font-size: .75em;
+    height: 4em;
+}
+
+.footerlong {
+    margin-bottom: 0px;
+    padding-top: .75em;
 }
 
 .makeyellow {
     color: #cba811;
+    margin-top: 0px;
+    padding-top: .5em;
 }
