--- a/css/portalstyle.css
+++ b/css/portalstyle.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #643219;
+    background-color: #e00618;
     border-radius: 15px;
     display: grid;
     grid-template-columns: auto auto auto 150px;
@@ -42,7 +42,7 @@ main h2 {
 }
 
 footer {
-    background-color: #643219;
+    background-color: #e00618;
     border-radius: 10px;
     color: white;
     text-align: center;
