--- a/css/portalstyle.css
+++ b/css/portalstyle.css
@@ -42,7 +42,7 @@ main h2 {
 }
 
 footer {
-    background-color: #e00618;
+    background-color: #9da;
     border-radius: 10px;
     color: white;
     text-align: center;
